@@ -1,5 +1,10 @@
 package nl.jixxed.eliteodysseymaterials.enums;
 
+import nl.jixxed.eliteodysseymaterials.service.LocaleService;
+
+import java.util.Arrays;
+import java.util.Locale;
+
 public enum DataPortType implements SpawnLocation {
     AGR,
     CMD,
@@ -14,6 +19,13 @@ public enum DataPortType implements SpawnLocation {
 
     public static DataPortType forName(final String name) {
         return DataPortType.valueOf(name.toUpperCase());
+    }
+
+    public static DataPortType forLocalizedName(final String name, final Locale locale) {
+        return Arrays.stream(DataPortType.values())
+                .filter((DataPortType dataPortType) -> LocaleService.getLocalizedStringForLocale(locale, dataPortType.getLocalizationKey()).equalsIgnoreCase(name))
+                .findFirst()
+                .orElseThrow(IllegalArgumentException::new);
     }
 
 
