@@ -1,2 +1,2 @@
 org.gradle.parallel=true
-version=1.94
+version=1.95
