@@ -7,6 +7,7 @@ Added wishlist export formats CSV and XLS
 Consider fleetcarrier materials as needed in export
 Added full inventory export to Settings (CSV and XLS)
 Show remaining indicator also to yellow wishlist ingredients on mouse hover
+Added tracking of dataports to figure out data spawn locations and droprates per port type
 
 Version 1.94
 -------------
